# kws-transformer

./: .dvcignore  .gitignore  README.md  pyproject.toml
.dvc/: config
dataset/: .gitignore  SpeechCommands.dvc  speech_commands_v0.02.tar.gz.dvc
kws_telegram_bot/: README.md  client_secrets.json  main.py  requirements.txt
kws_transformer/: config.py  train.py
kws_transformer/conf/: config.yaml  config_wandb_sweep.yaml
kws_transformer/kws/: data.py  model.py
kws_transformer/kws/preprocessing_data/: preproccesing.py  utils.py
tests/: __init__.py  app.py  audio_input.py  onnx_tests.py
tests/for_app/: audio_input_ui.py
